# bear-note-graph

./: .gitignore  README.md  paquefile.yaml  pylintrc  pyproject.toml
bear_note_graph/: generate.py  graph.py  main.py  parser.py  settings.py
resources/: configuration.yaml  palettes.yaml
tests/: test_parser.py  test_regressions.py
